# nomad-django-project

./: README.md  pyproject.toml
config/: authentication.py  settings.py  urls.py
tweets/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
tweets/migrations/: 0001_initial.py  0002_alter_like_tweet.py
tweets/templates/: all_tweets.html  tweet_detail.html
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_avatar.py  0003_remove_user_currency.py
